--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest --verbose test/*"
+    "test": "jest --verbose test/*",
+    "css-build": "node-sass --omit-source-map-url assets/sass/mystyles.scss assets/css/mystyles.css",
+    "css-watch": "npm run css-build -- --watch",
+    "start": "npm run css-watch"
   },
   "repository": {
     "type": "git",
@@ -21,7 +24,11 @@
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "bulma": "^0.8.0",
+    "inquirer": "^6.3.1",
+    "jquery": "^3.4.1",
+    "jsdom": "^16.1.0",
+    "node-sass": "^4.13.1"
   },
   "devDependencies": {
     "jest": "^24.8.0"
