--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "inquirer": "^6.3.1",
     "jquery": "^3.4.1",
     "jsdom": "^16.1.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "jest": "^24.8.0"
