--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.4.1",
     "jsdom": "^16.1.0",
     "node-sass": "^4.13.1",
+    "open": "^7.0.2",
     "util": "^0.12.1"
   },
   "devDependencies": {
